[package]
name = "tg-code-highlighter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
# to fix old version: https://github.com/telegram-rs/telegram-bot/issues/270
telegram-bot =  { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "65ad5cf" }
tokio = { version = "1.28.2", features = ["full"] }
